# papercraft-client

./: .gitignore  .npmrc  CLAUDE.md  Cargo.toml  README.md  index.html  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.base.json  tsconfig.json  turbo.json  vite.config.ts
crates/pp_client/: .gitignore  Cargo.toml  README.md  eslint.config.ts  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
crates/pp_client/scripts/: postprocess-wasm-js.sh
crates/pp_client/src/: editor.rs  event.rs  lib.rs  store.rs
crates/pp_client/src/command/: mod.rs  sync.rs
crates/pp_client/src/tool/: rotate.rs  select_box.rs  translate.rs
crates/pp_client/src/viewport/: cutting.rs  folding.rs
crates/pp_client/ts/: client.ts  index.ts
crates/pp_control/: Cargo.toml  README.md  index.html
crates/pp_control/src/: api.rs  editor.rs  event.rs  input.rs  keyboard.rs  lib.rs  main.rs
crates/pp_control/src/d2/: mod.rs
crates/pp_control/src/d3/: mod.rs  tool_select.rs
crates/pp_control/src/tool/: mod.rs  rotate.rs  select_box.rs  tool_select.rs  tool_transform.rs  translate.rs
crates/pp_control/src/tool/d2/: mod.rs  rotate.rs  translate.rs
crates/pp_control/src/viewport/: cutting.rs  d2.rs  folding.rs  mod.rs
crates/pp_control/src/viewport_2d/: mod.rs
crates/pp_control/src/viewport_3d/: mod.rs  tool_select.rs
crates/pp_control2/: Cargo.toml
crates/pp_control2/src/: event.rs  lib.rs
crates/pp_control2/src/d2/: mod.rs
crates/pp_control2/src/d3/: mod.rs
crates/pp_control2/src/dom/: event.rs  mod.rs
crates/pp_core/: Cargo.toml
crates/pp_core/src/: context.rs  cut.rs  id.rs  lib.rs  measures.rs  select.rs  settings.rs  state.rs
crates/pp_core/src/commands/: clear_cuts.rs  cut_edges.rs  make_cuts.rs  mod.rs  select.rs  select_elements.rs  transform_pieces.rs  update_flaps.rs
crates/pp_core/src/material/: image.rs  mod.rs  texture.rs
crates/pp_core/src/mesh/: cut.rs  edge.rs  face.rs  id.rs  iterators.rs  loop_.rs  matslot.rs  mod.rs  piece.rs  primitives.rs  vertex.rs  walk_adj.rs
crates/pp_core/src/model/: mesh.rs  mod.rs
crates/pp_core/src/print/: image_box.rs  mod.rs  text_box.rs
crates/pp_core/src/tool/: mod.rs  tool_transform.rs  transform.rs
crates/pp_core/src/tool/d2/: rotate.rs  translate.rs
crates/pp_core/src/viewport/: camera.rs  mod.rs
crates/pp_core/src/viewport/d2/: camera.rs
crates/pp_core/src/viewport/d3/: camera.rs  mod.rs
crates/pp_core/src/viewport_2d/: camera.rs  mod.rs
crates/pp_core/src/viewport_3d/: camera.rs  mod.rs
crates/pp_draw/: Cargo.toml
crates/pp_draw/src/: draw.rs  lib.rs  select.rs
crates/pp_draw/src/cache/: common.rs  mesh_cache.rs  mod.rs  prelude.rs
crates/pp_draw/src/cache/material/: image.rs  mod.rs  sampler.rs  texture.rs
crates/pp_draw/src/cache/mesh/: batches.rs  buffers.rs  extract.rs  mod.rs  piece.rs
crates/pp_draw/src/cache/print/: mod.rs
crates/pp_draw/src/cache/settings/: mod.rs  theme.rs
crates/pp_draw/src/cache/tool/: mod.rs  rotate.rs  select_box.rs  translate.rs
crates/pp_draw/src/cache/viewport/: bounds.rs  camera.rs  cutting.rs  folding.rs  mod.rs
crates/pp_draw/src/cache/viewport_2d/: camera.rs  mod.rs
crates/pp_draw/src/cache/viewport_3d/: camera.rs  mod.rs
crates/pp_draw/src/engines/: mod.rs  program.rs
crates/pp_draw/src/engines/d2/: mod.rs  overlay_grid.rs
crates/pp_draw/src/engines/d3/: cut_lines.rs  lines.rs  mod.rs  overlay_grid.rs  points.rs  surface.rs  tris.rs
crates/pp_draw/src/engines/dim3/: mod.rs
crates/pp_draw/src/engines/ink/: flaps.rs  flaps_lines.rs  lines.rs  lines_cut.rs  mod.rs  overlay_grid_circle.rs  overlay_grid_rect.rs  points.rs  surface.rs  tris.rs
crates/pp_draw/src/engines/ink2/: mod.rs  overlay_grid.rs  prg_overlay_grid.rs
crates/pp_draw/src/engines/ink3/: lines.rs  mod.rs  overlay_grid.rs  points.rs  prg_edge.rs  prg_lines.rs  prg_overlay_grid.rs  prg_points.rs  prg_surface.rs  surface.rs  tris.rs
crates/pp_draw/src/engines/overlay/: grid_circle.rs  grid_rect.rs  mod.rs  page.rs  tool_rotate.rs  tool_select_box.rs  tool_translate.rs
crates/pp_draw/src/engines/select/: lines.rs  mod.rs  points.rs  surface.rs  tris.rs
crates/pp_draw/src/engines/shaders/: flaps.wgsl  flaps_lines.wgsl  grid.wgsl  lines.wgsl  lines_cut.wgsl  overlay_grid_circle.wgsl  overlay_grid_rect.wgsl  points.wgsl  surface.wgsl  tris.wgsl
crates/pp_draw/src/gpu/: batch.rs  context.rs  framebuffer.rs  gpu_batch.rs  gpu_context.rs  gpu_framebuffer.rs  gpu_material.rs  gpu_model.rs  gpu_texture.rs  index_buffer.rs  mod.rs  settings.rs  texture.rs  uniform_buffer.rs  vertex_buffer.rs
crates/pp_draw/src/gpu/layouts/: bind_groups.rs  mod.rs  pipelines.rs
crates/pp_editor/: Cargo.toml  README.md
crates/pp_editor/src/: lib.rs  measures.rs  windowing.rs
crates/pp_editor/src/scene/: cutting.rs  folding.rs  mod.rs
crates/pp_editor/src/settings/: mod.rs  theme.rs
crates/pp_editor/src/tool/: mod.rs  rotate.rs  select_box.rs  translate.rs
crates/pp_editor/src/viewport/: cutting.rs  folding.rs  mod.rs
crates/pp_export/: Cargo.toml  README.md
crates/pp_import/: Cargo.toml  README.md  example2.gltf
crates/pp_import/examples/: import_glb.rs  import_gltf.rs
crates/pp_import/src/: gltf.rs
crates/pp_import/src/gltf/: mod.rs
crates/pp_import/src/wavefront_obj/: mod.rs
crates/pp_renderer/: Cargo.toml
crates/pp_renderer/src/: camera.rs  lib.rs  texture.rs  viewport_3d.rs
crates/pp_save/: Cargo.toml  README.md  example2.gltf
crates/pp_save/examples/: roundtrip.rs  roundtrip_cut.rs  save_cube.rs  save_cut_cube.rs
crates/pp_save/examples/assets/: link.glb  link2.glb
crates/pp_save/src/: lib.rs  load.rs  save.rs
crates/pp_save/src/extra/: cut.rs  mod.rs  page.rs  piece.rs
crates/pp_save/src/gltf/: buffers.rs  image.rs  material.rs  mesh.rs  mod.rs
crates/pp_save/src/standard/: buffers.rs  image.rs  material.rs  mesh.rs  mod.rs  sampler.rs
crates/pp_server/: Cargo.toml  package.json
crates/pp_server/examples/: local.rs
crates/pp_server/src/: lib.rs  protocol.rs  session.rs  store.rs
(+86 files in other folders)
