[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Evan Kirkiles <kirkilese@gmail.com>"]
edition = "2021"
homepage = "https://paperarium.place"
repository = "https://github.com/evankirkiles/papercraft-client"
rust-version = "1.81"
version = "0.0.1"

[workspace.dependencies]
# Internal:
pp_core = { path = "crates/pp_core", version = "0.0.1" }
pp_draw = { path = "crates/pp_draw", version = "0.0.1" }
pp_viewer = { path = "crates/pp_viewer", version = "0.0.1" }

# External:
anyhow = "1.0"
bytemuck = { version = "1.19", features = ["derive"] }
cfg-if = "1"
cgmath = "0.18"
console_error_panic_hook = { version = "0.1.7" }
console_log = "1.0.0"
env_logger = "0.11.5"
fs_extra = "1.3.0"
futures = "0.3.31"
glob = "0.3.1"
image = { version = "0.25", default_features = false, features = [
  "png",
  "jpeg",
] }
log = "0.4.22"
pollster = "0.4.0"
tobj = { version = "4.0", default_features = false, features = ["async"] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "Location",
  "console",
] }
wgpu = { version = "23.0", features = ["wgsl", "webgl"] }
winit = { version = "0.30", features = ["rwh_05"] }
