[package]
name = "pp_control"
description = "The controller for commands / events on the core state."
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"] # Support both WASM and Native compilation

[dependencies]
# Internal:
pp_core.workspace = true
pp_draw.workspace = true
# External:
anyhow.workspace = true
cfg-if.workspace = true
log.workspace = true
pollster.workspace = true
winit.workspace = true

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true

# ------------------ Native Dependencies ------------------

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

# ------------------- WASM Dependencies -------------------

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
console_log.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
