[package]
name = "pp_control"
description = "A controller that manages the model, view, and UI interaction."
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"] # Support both WASM and Native compilation

[dependencies]
# Internal:
pp_core.workspace = true
pp_draw.workspace = true
# External:
ascii = "1.1.0"
bitflags.workspace = true
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "console"] }
cfg-if.workspace = true
log.workspace = true
futures.workspace = true
compact_str = "0.9.0"
console_error_panic_hook = { workspace = true, optional = true }
console_log.workspace = true
paste.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wgpu.workspace = true

[build-dependencies]
anyhow.workspace = true
glob.workspace = true
