[package]
name = "pp_editor"
version = "0.0.1"
description = "Editor-related state, managing viewports / tools / user input"
authors = ["Evan Kirkiles"]
repository = "https://github.com/evankirkiles/papercraft-client"
edition = "2021"

[dependencies]
pp_core.workspace = true
cgmath.workspace = true
log.workspace = true
slotmap.workspace = true

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true
