[package]
name = "pp_editor"
version = "0.0.1"
description = "Editor-related state, managing viewports / tools / user input"
authors = ["Evan Kirkiles"]
repository = "https://github.com/evankirkiles/papercraft-client"
edition = "2021"

[dependencies]
# Internal:
pp_core.workspace = true
# External:
cgmath.workspace = true
log.workspace = true
serde.workspace = true
slotmap.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true
