[package]
name = "pp_export"
description = "Papercraft export functionality"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal:
pp_core.workspace = true
pp_draw.workspace = true
