[package]
name = "pp_import"
description = "Papercraft client model import functionality"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"] # Support both WASM and Native compilation

[dependencies]
# Internal:
pp_core.workspace = true
pp_save.workspace = true

# External:
anyhow.workspace = true
gltf.workspace = true
gltf-json.workspace = true
thiserror.workspace = true
