[package]
name = "pp_server"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies
pp_core.workspace = true
pp_save.workspace = true

# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4"] }

# Async traits
async-trait = "0.1"

# S3 support (optional)
aws-sdk-s3 = { version = "1.68", optional = true }
aws-config = { version = "1.5", optional = true }

[features]
default = []
s3 = ["aws-sdk-s3", "aws-config"]

[[example]]
name = "local"
path = "examples/local.rs"
